--- a/logseq/custom.css
+++ b/logseq/custom.css
@@ -1,13 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;700&family=Fira+Sans:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"); 
 
  
-3 :root { 
-4   --background: #282828; 
-5   --light-background: #3c3836; 
-6   --lighter-background: #504945; 
-7   --dark-background: #3c3836; 
-8   --darker-background: #1d2021; 
-9   --foreground: #ebdbb2; 
+:root { 
+--background: #282828; 
+--light-background: #3c3836; 
+--lighter-background: #504945; 
+--dark-background: #3c3836; 
+--darker-background: #1d2021; 
+--foreground: #ebdbb2; 
 10   --current-line: #504954; 
 11   --comment: #928374; 
 12   --white: var(--foreground); 
